[gd_scene load_steps=11 format=2]

[ext_resource path="res://classes/entity/enemy/cheep_cheep/cheep_cheep1.png" type="Texture" id=1]
[ext_resource path="res://classes/entity/enemy/cheep_cheep/cheep_cheep2.png" type="Texture" id=2]
[ext_resource path="res://classes/entity/enemy/cheep_cheep/cheep_cheep.gd" type="Script" id=3]
[ext_resource path="res://classes/dejitter_group/dejitter_group.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9.5, 9.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.5, 9.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 1 )

[node name="CheepCheep" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )
_hurtbox_stomp_path = NodePath("")
_sfx_stomp_path = NodePath("")
_sfx_struck_path = NodePath("")
_sfx_struck_land_path = NodePath("")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
script = ExtResource( 4 )

[node name="HurtboxStrike" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483650
input_pickable = false
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="HurtboxStrike"]
shape = SubResource( 6 )

[node name="AlertArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertArea"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483650
input_pickable = false
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="WaterCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCheck"]
shape = SubResource( 5 )

[connection signal="body_entered" from="AlertArea" to="." method="_on_AlertArea_body_entered"]
[connection signal="body_exited" from="AlertArea" to="." method="_on_AlertArea_body_exited"]
